--- a/src/App.css
+++ b/src/App.css
@@ -50,21 +50,18 @@ p.lead,
   padding: 10px !important;
 }
 
-input {
-  width: 400px !important;
-}
-
 .selected {
   border: 1px solid red !important;
 }
 
+.comment-area-container {
+  display: flex;
+  justify-content: center;
+}
+
 .comment-area {
-  position: absolute;
-  top: 0;
-  left: 15%;
-  z-index: 2;
+  margin-top: 65px;
   background-color: white;
-  box-shadow: 0px 0px 17px -1px rgba(0, 0, 0, 0.75);
   border-radius: 5px;
   width: 400px;
   font-size: 13px;
