--- a/src/App.css
+++ b/src/App.css
@@ -51,12 +51,11 @@ p.lead,
 }
 
 .selected {
-  border: 1px solid red !important;
+  outline: 1px solid red !important;
 }
 
-.comment-area-container {
-  display: flex;
-  justify-content: center;
+.comment-area-container h4 {
+  margin-top: 70px;
 }
 
 .comment-area {
@@ -66,6 +65,8 @@ p.lead,
   width: 400px;
   font-size: 13px;
   padding: 10px;
+  position: sticky;
+  top: 50px;
 }
 
 .comment-area p {
